parameters and some change to common dialog

--- a/isms-ui/src/assets/i18n/en.json
+++ b/isms-ui/src/assets/i18n/en.json
@@ -1,4 +1,8 @@
 {
+  "COMMON": {
+    "YES": "yes",
+    "NO": "no"
+  },
   "RISK-MANAGEMENT": {
     "SETTINGS": {
       "CONSEQUENCE-PARAMETERS": {
