--- a/isms-ui/src/assets/i18n/fa.json
+++ b/isms-ui/src/assets/i18n/fa.json
@@ -1,4 +1,8 @@
 {
+  "COMMON": {
+    "YES": "بلی",
+    "NO": "خیر"
+  },
   "RISK-MANAGEMENT": {
     "SETTINGS": {
       "CONSEQUENCE-PARAMETERS": {
