add new feature

--- a/isms-ui/src/assets/i18n/en.json
+++ b/isms-ui/src/assets/i18n/en.json
@@ -6,6 +6,10 @@
   "RISK-MANAGEMENT": {
     "SETTINGS": {
       "CONSEQUENCE-PARAMETERS": {
+        "PARAMETERS-SELECTOR-DIALOG": {
+          "TITLE-SELECT": "Select Type",
+          "TITLE-CREATE": "Create Type"
+        },
         "CONFIDENTIALITY": "Confidentiality (C)",
         "INTEGRITY": "Integrity (I)",
         "AVAILABILITY": "Availability (A)"
